--- a/README
+++ b/README
@@ -2,9 +2,9 @@ Configure Ding with the following settings:
 
   Ting service settings:
     Library Code: 123456
-    Search Service Url: http://localhost:9000/opensearch_gentofte/
-    Scan Service Url: http://localhost:9000/openscan_nextkilde/
-    Spell Service Url: http://localhost:9000/openspell_nextkilde/
+    Search Service Url: http://localhost:9000/opensearch/
+    Scan Service Url: http://localhost:9000/openscan/
+    Spell Service Url: http://localhost:9000/openspell/
     Recommendation Service Url: http://localhost:9000/adhl/
 
   Additional Information settings:
